[tool.poetry]
name = "axolotl"
version = "0.1.0"
description = ""
authors = ["Jurriaan Den Toonder <1493561+Fastjur@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.7.x"
torch = "1.4.x"
transformers = "^3"
fuzzywuzzy = "^0.18.0"
protobuf = "3.20.x"
jupyter = "^1.0.0"
datasets = "^2.6.1"
tqdm = "^4.64.1"
jsbeautifier = "^1.14.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
